<resources>
    <string name="app_name">ToDoApp</string>
    <string name="enter_item">Enter Item</string>
    <string name="add">ADD</string>
    <string name="item_added">Item Added</string>
    <string name="snackbar_done">Done</string>
    <string name="snackbar_empty">Nothing entered</string>
    <string name="history">History</string>
    <string name="clear_history">Clear History</string>
    <string name="this_list_is_empty">This list is Empty</string>
    <string name="add_a_Todo">Add a ToDo</string>
</resources>