<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistoryActivity">

    <TextView
        android:id="@+id/activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <ListView
        android:id="@+id/history_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="12dp"
        android:focusable="false" />

    <TextView
        android:id="@+id/empty_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/this_list_is_empty"
        android:gravity="center"
        android:layout_marginHorizontal="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_history"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="12dp"
        />

</LinearLayout>