<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <EditText
            android:id="@+id/item_edit_text"
            android:inputType="text"
            android:hint="@string/enter_item"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/add_btn"
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/items_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:focusable="false" />

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/add_a_Todo"
        android:gravity="center"
        android:layout_marginHorizontal="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

</LinearLayout>